--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-tailwind/react": "^1.4.2",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.1",
+    "@next-auth/firebase-adapter": "^2.0.1",
+    "bar-of-progress": "^1.1.0",
+    "draft-js": "^0.11.7",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^9.20.0",
     "next": "13.3.1",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-firebase-hooks": "^5.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1"
   }
 }
